force-app/main/default/objects/Dev_Service__c/Dev_Service__c.object-meta.xml
<CustomObject>
    <label>ユーザサポート</label>
    <nameField>
        <label>件名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ユーザサポート</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>