force-app/main/default/objects/Dev_Service__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <inlineHelpText>リンク・画像の貼り付けも可能です</inlineHelpText>
    <label>ご要望・ご質問の内容</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>