force-app/main/default/objects/Dev_Service__c/fields/countIssue__c.field-meta.xml
<CustomField>
    <fullName>countIssue__c</fullName>
    <description>課題数をカウントすることで複雑度を概算しています</description>
    <label>課題数</label>
    <summaryForeignKey>Relation_Support2Issue__c.Dev_Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>