force-app/main/default/objects/Dev_Service__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <defaultValue>&quot;OPEN&quot;</defaultValue>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>CLOSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>