force-app/main/default/objects/Dev_Service__c/fields/StatusSignal__c.field-meta.xml
<CustomField>
    <fullName>StatusSignal__c</fullName>
    <formula>if(
  ISPICKVAL( status__c , &quot;OPEN&quot;),
  IMAGE(&quot;/img/samples/rating1.gif&quot;,&quot;OPEN&quot;),
  if(
    ISPICKVAL( status__c , &quot;CLOSE&quot;),
    IMAGE(&quot;/img/samples/rating3.gif&quot;,&quot;CLOSE&quot;),
    &quot;&quot;
  )
)</formula>
    <label>StatusSignal</label>
    <type>Text</type>
</CustomField>