force-app/main/default/objects/Dev_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>StatusSignal__c</columns>
    <columns>status__c</columns>
    <columns>countIssue__c</columns>
    <columns>NAME</columns>
    <columns>logNo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>