force-app/main/default/objects/Dev_Service__c/listViews/OPEN.listView-meta.xml
<ListView>
    <fullName>OPEN</fullName>
    <columns>StatusSignal__c</columns>
    <columns>NAME</columns>
    <columns>logNo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>status__c</field>
        <operation>equals</operation>
        <value>OPEN</value>
    </filters>
    <label>OPEN</label>
</ListView>